--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -1,15 +1,16 @@
 {
     "debug": true,
     "osdbCfg":"../osdbCfg.json",
-    "saveTestTrainData": false,
-    "testDataFile":"testData_22feb23.json",
-    "trainDataFile":"trainData_22feb23.json",
+    "saveTestTrainData": true,
+    "testDataFile":"testData_05may23.json",
+    "trainDataFile":"trainData_05may23.json",
     "modelClass": "cnnModel.CnnModel",
     "nLayers": 3,
     "epochs": 500,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
-    "oversample": "random",
+    "oversample": 0,
+    "undersample": "random",
     "noiseAugmentation": true,
     "noiseAugmentationFactor": 100,
     "noiseAugmentationValue": 20.0,
