--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -3,7 +3,7 @@
     "_tcSeizuresFname":"osdb_3min_tcSeizures.json",
     "_allSeizuresFname":"osdb_3min_allSeizures.json",
     "_falseAlarmsFname":"osdb_3min_falseAlarms.json",
-    "_falseAlarmsFname":"osdb_3min_ndaEvents.json",
+    "__falseAlarmsFname":"osdb_3min_ndaEvents.json",
     "#tcSeizuresFname":"osdb_test_tcSeizures.json",
     "#allSeizuresFname":"osdb_test_allSeizures.json",
     "#falseAlarmsFname":"osdb_test_falseAlarms.json",
