Added random undersampling option to nnTrainer and minor improvements to prevent crashes with invalid data.

--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -9,14 +9,14 @@
     "epochs": 500,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
-    "oversample": 0,
+    "oversample": "none",
     "undersample": "random",
     "noiseAugmentation": true,
     "noiseAugmentationFactor": 100,
     "noiseAugmentationValue": 20.0,
     "phaseAugmentation": true,
-    "splitTestTrainByEvent": true,
-    "accSdThreshold": 0.5,
+    "splitTestTrainByEvent": false,
+    "accSdThreshold": 2.0,
     "testProp" : 0.3,
     "validationProp": 0.3,
     "randomSeed" : 4,
