Progressing with creating nnTrainer_csv

--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -4,17 +4,18 @@
     "saveTestTrainData": true,
     "testDataFile":"testData_05may23.json",
     "trainDataFile":"trainData_05may23.json",
+    "trainDataCsvFile":"allSeizures.csv",
     "modelClass": "cnnModel.CnnModel",
     "nLayers": 3,
     "epochs": 500,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
-    "oversample": "none",
-    "undersample": "random",
+    "oversample": "random",
+    "undersample": "none",
     "noiseAugmentation": true,
     "noiseAugmentationFactor": 100,
     "noiseAugmentationValue": 20.0,
-    "phaseAugmentation": true,
+    "phaseAugmentation": false,
     "splitTestTrainByEvent": false,
     "accSdThreshold": 2.0,
     "testProp" : 0.3,
