--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -11,13 +11,13 @@
     "epochs": 500,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
-    "oversample": "random",
+    "oversample": "none",
     "undersample": "none",
     "noiseAugmentation": true,
-    "noiseAugmentationFactor": 100,
+    "noiseAugmentationFactor": 10,
     "noiseAugmentationValue": 20.0,
-    "phaseAugmentation": false,
-    "splitTestTrainByEvent": false,
+    "phaseAugmentation": true,
+    "splitTestTrainByEvent": true,
     "accSdThreshold": 2.0,
     "testProp" : 0.3,
     "validationProp": 0.3,
