--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -8,13 +8,13 @@
     "#allSeizuresFname":"osdb_test_allSeizures.json",
     "#falseAlarmsFname":"osdb_test_falseAlarms.json",
 
-    "dataFiles": [
+    "_dataFiles": [
 	"osdb_3min_allSeizures.json",
 	"osdb_3min_falseAlarms.json"
     ],
 
-    "_dataFiles": [
-		"testData_29oct22.json"
+    "dataFiles": [
+		"testData_05may23.json"
 	],
     
     
@@ -69,11 +69,11 @@
             }
 	},
 	{
-	    "name": "cnn_v0.32",
+	    "name": "cnn_v0.33",
 	    "alg": "nnAlg.NnAlg",
 	    "enabled": true,
 	    "settings" : {
-		"modelFname":"cnn_v0.32.h5",
+		"modelFname":"cnn_v0.33.h5",
 		"mode": "multi",
 		"samplePeriod" : 5.0,
 		"warnTime": 5,
