Updated summariseData.py to have option of using live OSDB data rather than locally cached data - easier if I want to check an event for a user and don't know whether to mark it as a real seizure or a false alarm

--- a/user_tools/nnTraining/nnConfig.json
+++ b/user_tools/nnTraining/nnConfig.json
@@ -11,12 +11,12 @@
     "epochs": 500,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
-    "oversample": "none",
+    "oversample": "random",
     "undersample": "none",
-    "noiseAugmentation": true,
+    "noiseAugmentation": false,
     "noiseAugmentationFactor": 10,
     "noiseAugmentationValue": 20.0,
-    "phaseAugmentation": true,
+    "phaseAugmentation": false,
     "splitTestTrainByEvent": true,
     "accSdThreshold": 2.0,
     "testProp" : 0.3,
