Changed normalisation of the sepectral history plots to distinguish periods of low acceleration from periond with higher acceleration movements.   This is looking promising, but it is being dominated by very short high  acceleration peaks which makes the image very dark - we should probably normalise to say 75th percentile value and let the high acceleration pixels saturate?

--- a/user_tools/dataSummariser/templates/index.html.template
+++ b/user_tools/dataSummariser/templates/index.html.template
@@ -123,7 +123,13 @@
       </tr>
     </table>
     <img src="analysis.png"/>
+    <h2>Selected Simplified Spectra</h2>
     <img src="spectrum.png"/>
+    <h2> Spectral History (vector magnitude and three separate axes)</h2>
+    <img src="spectralHistory.png"/>
+    <h2> Spectral History - all Axes</h2>
+    <p>Note x=red, y=green, z=blue</p>
+    <img src="spectralHistoryColour.png"/>
 
 
     <p>This page was generated at {{ data.pageDateStr }}.
