--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -1,24 +1,112 @@
 {
-    "testName": "Unique Events from DB 29aug2022",
-    "_tcSeizuresFname":"osdb_3min_tcSeizures.json",
-    "_allSeizuresFname":"osdb_3min_allSeizures.json",
-    "_falseAlarmsFname":"osdb_3min_falseAlarms.json",
-    "__falseAlarmsFname":"osdb_3min_ndaEvents.json",
-    "#tcSeizuresFname":"osdb_test_tcSeizures.json",
-    "#allSeizuresFname":"osdb_test_allSeizures.json",
-    "#falseAlarmsFname":"osdb_test_falseAlarms.json",
-
     "dataFiles": [
-	"osdb_3min_allSeizures.json",
-	"osdb_3min_falseAlarms.json"
-    ],
+	"osdb_3min_allSeizures.json"
+],
 
     "_dataFiles": [
-		"testData_05may23.json"
+		"testData_05may23.json",
+		"osdb_3min_ndaEvents.json",
+		"osdb_3min_falseAlarms.json",
+		"osdb_3min_ndaEvents.json",
+		"osdb_3min_falseAlarms.json"
 	],
     "requireHrData" : false,
-    
-    "invalidEvents": [886, 1850, 1933,
+	"require3dData" : true,
+	"download": false,
+    "credentialsFname": "../client.cfg",
+
+    "algorithms": [
+		{
+			"name": "OSD_v0",
+			"alg": "osdAlg.OsdAlg",
+			"enabled": false,
+			"settings" : {
+				"mode": "V0",
+				"offset": 0.0,
+				"sampleFreq" : 25,
+				"samplePeriod" : 5.0,
+				"alarmFreqMin" : 3,
+				"alarmFreqMax" : 8,
+				"alarmThresh" : 800,
+				"alarmRatioThresh" : 57,
+				"warnTime": 5,
+				"alarmTime": 10
+			}
+		},
+		{
+			"name": "OSD_v1",
+			"alg": "osdAlg.OsdAlg",
+			"enabled": false,
+			"settings" : {
+				"mode": "V1",
+				"offset": 0.0,
+				"sampleFreq" : 25,
+				"samplePeriod" : 5.0,
+				"alarmFreqMin" : 3,
+				"alarmFreqMax" : 8,
+				"alarmThresh" : 800,
+				"alarmRatioThresh" : 57,
+				"warnTime": 5,
+				"alarmTime": 10
+			}
+		},
+		{
+			"name": "OSD_v2",
+			"alg": "osdAlg.OsdAlg",
+			"enabled": true,
+			"settings" : {
+				"mode": "V2",
+				"offset": 0.0,
+				"sampleFreq" : 25,
+				"samplePeriod" : 5.0,
+				"alarmFreqMin" : 3,
+				"alarmFreqMax" : 8,
+				"alarmThresh" : 800,
+				"alarmRatioThresh" : 57,
+				"warnTime": 5,
+				"alarmTime": 10
+			}
+		},
+		{
+			"name": "OSD_v3",
+			"alg": "osdAlg.OsdAlg",
+			"enabled": false,
+			"settings" : {
+				"mode": "V3",
+				"offset": 2500.0,
+				"sampleFreq" : 25,
+				"samplePeriod" : 5.0,
+				"alarmFreqMin" : 3,
+				"alarmFreqMax" : 8,
+				"alarmThresh" : 800,
+				"alarmRatioThresh" : 57,
+				"warnTime": 5,
+				"alarmTime": 10
+			}
+		},
+		{
+			"name": "cnn",
+			"alg": "nnAlg.NnAlg",
+			"enabled": false,
+			"settings" : {
+			"modelFname":"cnn.h5",
+			"mode": "multi",
+			"samplePeriod" : 5.0,
+			"warnTime": 5,
+			"alarmTime": 10
+				}
+		},
+		{
+			"name": "Phone",
+			"alg": "deviceAlg.DeviceAlg",
+			"enabled": false,
+			"settings" : {
+				"ipAddr" : "192.168.0.100"
+			}
+		}
+	],
+	"invalidEvents": [],
+    "_invalidEvents": [886, 1850, 1933,
 	5364, 5381,
 	1046, 5886, 5887, 7724, 8625, 8753, 8889,
 	9129, 9131,
@@ -38,7 +126,7 @@
 			  23402, 23405, 23407, 23409, 23413, 23417,23423,
 			  23683
    ],
-	"invalidEventsReasons": [
+	"_invalidEventsReasons": [
 	"887, 1850, 1933 - only 2 datapoints stored for each event",
 	"5364, 5381, 7724, 8753, 8889 - no datapoinfts",
 	"1046, 5886, 5887, 8625, 9129, 9131, 10669, 10675, 11020, 15930, 16308, 17676, 17677 - invalid data",
@@ -51,151 +139,5 @@
 	    "5580, 6668, 6847, 7222, 7363, 7365, 7443, 9470, 12763 - duration too short - includes some zero movement data",
 	    "23201 - no datapoints",
 	    "23402, 23405, 23407, 23409, 23413, 23417, 23423, 23683 - no dataTime elements? - WHY???"
-	],
-    "algorithms": [
-	{
-	    "name": "OSD_v1",
-	    "alg": "osdAlg_v1.OsdAlg_v1",
-	    "enabled": true,
-	    "settings" : {
-		"sampleFreq" : 25,
-		"samplePeriod" : 5.0,
-		"alarmFreqMin" : 3,
-		"alarmFreqMax" : 8,
-		"alarmThresh" : 800,
-		"alarmRatioThresh" : 57,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "OSD_slow",
-	    "alg": "osdAlg_v1.OsdAlg_v1",
-	    "enabled": true,
-	    "settings" : {
-		"sampleFreq" : 25,
-		"samplePeriod" : 5.0,
-		"alarmFreqMin" : 3,
-		"alarmFreqMax" : 8,
-		"alarmThresh" : 800,
-		"alarmRatioThresh" : 57,
-		"warnTime": 5,
-		"alarmTime": 15
-            }
-	},
-	{
-	    "name": "cnn",
-	    "alg": "nnAlg.NnAlg",
-	    "enabled": false,
-	    "settings" : {
-		"modelFname":"cnn.h5",
-		"mode": "multi",
-		"samplePeriod" : 5.0,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "cnnAdam",
-	    "alg": "nnAlg.NnAlg",
-	    "enabled": false,
-	    "settings" : {
-		"modelFname":"cnnAdam.h5",
-		"mode": "multi",
-		"samplePeriod" : 5.0,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "cnnRMS",
-	    "alg": "nnAlg.NnAlg",
-	    "enabled": false,
-	    "settings" : {
-		"modelFname":"cnnRMSProps.h5",
-		"mode": "multi",
-		"samplePeriod" : 5.0,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "OSD_highThresh",
-	    "alg": "osdAlg_v1.OsdAlg_v1",
-	    "enabled": false,
-	    "settings" : {
-		"sampleFreq" : 25,
-		"samplePeriod" : 5.0,
-		"alarmFreqMin" : 3,
-		"alarmFreqMax" : 8,
-		"alarmThresh" : 1000,
-		"alarmRatioThresh" : 61,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "Jamie_v1",
-	    "alg": "jamie1.Jamie1Alg",
-	    "enabled": false,
-	    "settings" : {
-		"modelFname": "jamie1.pkl",
-		"mode": "single",
-		"sampleFreq" : 25,
-		"samplePeriod" : 5.0,
-		"alarmFreqMin" : 3,
-		"alarmFreqMax" : 8,
-		"alarmThresh" : 100,
-		"alarmRatioThresh" : 57,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "Jamie_v1b",
-	    "alg": "jamie1.Jamie1Alg",
-	    "enabled": false,
-	    "settings" : {
-		"modelFname": "jamie1.pkl",
-		"mode": "multi",
-		"sampleFreq" : 25,
-		"samplePeriod" : 5.0,
-		"alarmFreqMin" : 3,
-		"alarmFreqMax" : 8,
-		"alarmThresh" : 100,
-		"alarmRatioThresh" : 57,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "Jamie_v2b",
-	    "alg": "jamie1.Jamie1Alg",
-	    "enabled": false,
-	    "settings" : {
-		"modelFname": "jamie2.pkl",
-		"mode": "multi",
-		"sampleFreq" : 25,
-		"samplePeriod" : 5.0,
-		"alarmFreqMin" : 3,
-		"alarmFreqMax" : 8,
-		"alarmThresh" : 100,
-		"alarmRatioThresh" : 57,
-		"warnTime": 5,
-		"alarmTime": 10
-            }
-	},
-	{
-	    "name": "Phone",
-	    "alg": "deviceAlg.DeviceAlg",
-	    "enabled": false,
-	    "settings" : {
-		"ipAddr" : "192.168.0.100"
-	    }
-	}
-
-
-    ],
-    "download": false,
-    "credentialsFname": "../client.cfg"
+    ]
 }
