Added two seizure events to invalid data list, because the data is corrupted so they need to be removed from the database.

--- a/curator_tools/osdb.cfg
+++ b/curator_tools/osdb.cfg
@@ -51,7 +51,8 @@
 43670, 43914, 43835, 43632, 43724, 43872, 43558, 43646, 43687, 43818, 43847, 43880, 
 60577, 60578, 
 43669, 43919, 43668, 43921, 43660, 43828, 43908, 
-51854
+51854,
+61879, 61950
 	],
     "invalidEventsReasons": [
 		"41064 - incorrect time specified for seizure - event 41062 is correct",
@@ -61,7 +62,8 @@
 	"5886, 5887, 8625, 9129, 9131, 10669, 10675, 11020, 15930, 16308, 17676, 17677 - invalid data",
 	"15099, 15100, 15101, 15527, 16104, 16329, 19184, 19194, 19605 - no datapoints associated with event",
 	"20595 - test",
-	"7443, 7445 - bad data"
+	"7443, 7445 - bad data",
+	"61879, 61950 - bad data"
 			    ],
 
     "credentialsFname": "./client.cfg"
