Updated seizure durations, and added seconds to event summary time display

--- a/curator_tools/osdb.cfg
+++ b/curator_tools/osdb.cfg
@@ -52,7 +52,8 @@
 60577, 60578, 
 43669, 43919, 43668, 43921, 43660, 43828, 43908, 
 51854,
-61879, 61950
+61879, 61950,
+98157
 	],
     "invalidEventsReasons": [
 		"41064 - incorrect time specified for seizure - event 41062 is correct",
@@ -63,7 +64,8 @@
 	"15099, 15100, 15101, 15527, 16104, 16329, 19184, 19194, 19605 - no datapoints associated with event",
 	"20595 - test",
 	"7443, 7445 - bad data",
-	"61879, 61950 - bad data"
+	"61879, 61950 - bad data",
+	"98157 - was scratching just before a real seizure (event 98163)"
 			    ],
 
     "credentialsFname": "./client.cfg"
