--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -1,11 +1,11 @@
 {
     "dataFiles": [
-	"osdb_3min_allSeizures.json",
-	"osdb_3min_falseAlarms.json"
+	"osdb_3min_allSeizures.json"
 
 ],
 
     "_dataFiles": [
+	"osdb_3min_ndaEvents.json",
 		"testData_05may23.json",
 		"osdb_3min_ndaEvents.json",
 		"osdb_3min_falseAlarms.json",
@@ -19,28 +19,11 @@
 
     "algorithms": [
 		{
-			"name": "OSD_v0",
+			"name": "OSD_default",
 			"alg": "osdAlg.OsdAlg",
-			"enabled": false,
+			"enabled": true,
 			"settings" : {
-				"mode": "V0",
-				"offset": 0.0,
-				"sampleFreq" : 25,
-				"samplePeriod" : 5.0,
-				"alarmFreqMin" : 3,
-				"alarmFreqMax" : 8,
-				"alarmThresh" : 100,
-				"alarmRatioThresh" : 57,
-				"warnTime": 5,
-				"alarmTime": 10
-			}
-		},
-		{
-			"name": "OSD_v1",
-			"alg": "osdAlg.OsdAlg",
-			"enabled": false,
-			"settings" : {
-				"mode": "V1",
+				"mode": "V2",
 				"offset": 0.0,
 				"sampleFreq" : 25,
 				"samplePeriod" : 5.0,
@@ -61,10 +44,10 @@
 				"offset": 0.0,
 				"sampleFreq" : 25,
 				"samplePeriod" : 5.0,
-				"alarmFreqMin" : 3,
+				"alarmFreqMin" : 2.0,
 				"alarmFreqMax" : 8,
 				"alarmThresh" : 100,
-				"alarmRatioThresh" : 57,
+				"alarmRatioThresh" : 50,
 				"warnTime": 5,
 				"alarmTime": 10
 			}
@@ -74,14 +57,14 @@
 			"alg": "osdAlg.OsdAlg",
 			"enabled": true,
 			"settings" : {
-				"mode": "V3",
-				"offset": 2500.0,
+				"mode": "V2",
+				"offset": 0.0,
 				"sampleFreq" : 25,
 				"samplePeriod" : 5.0,
-				"alarmFreqMin" : 3,
+				"alarmFreqMin" : 2,
 				"alarmFreqMax" : 8,
-				"alarmThresh" : 100,
-				"alarmRatioThresh" : 30,
+				"alarmThresh" : 500,
+				"alarmRatioThresh" : 54,
 				"warnTime": 5,
 				"alarmTime": 10
 			}
@@ -110,7 +93,8 @@
 	"invalidEvents": [
 		44314, 61879, 61950, 45209, 
 		9828,12763, 12973, 14101, 15208,
-		21603, 21695, 21797, 21855, 21865, 21866, 21867, 21886, 27786, 45564],
+	    21603, 21695, 21797, 21855, 21865, 21866, 21867, 21886, 27786, 45564,
+	88381],
 	"invalidEventsReasons": [
 		"44314, 61879, 61950 - invalid data",
 		"45209 - duplicate of 45208",
