Modified getFilteredEventsLst to work with empty strings or None (which makes it easier to handle JSON based configuration input)

--- a/user_tools/testRunner/testConfig.json
+++ b/user_tools/testRunner/testConfig.json
@@ -2,7 +2,19 @@
     "dataFiles": [
 	"osdb_3min_allSeizures.json"
 
-],
+	],
+	"eventFilters": {
+		"includeUserIds" : [], 
+		"excludeUserIds" : [],
+		"includeTypes" : [],
+		"excludeTypes" : [],
+		"includeSubTypes" : [],
+		"excludeSubTypes" : [],
+		"includeDataSources" : [],
+		"excludeDataSources" : [],
+		"includeText" : [],
+		"excludeText" : []
+	},
 
     "_dataFiles": [
 	"osdb_3min_ndaEvents.json",
