Update requirements.txt to get nnTraining2 working, add diagnostic output from augmentData.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ imblearn
 jsbeautifier
 jinja2
 matplotlib
+pydot
+pydotplus
 numpy
 pandas
 python-dateutil
@@ -9,3 +11,5 @@ requests
 scikit-learn
 tabulate
 tensorflow
+seaborn
+keras.utils
