Removed 'Manual Alarm' (alarmState=5) from summary output and used highest automatically detected alarm level instead

--- a/user_tools/dataSummariser/templates/userSummary.template
+++ b/user_tools/dataSummariser/templates/userSummary.template
@@ -79,6 +79,7 @@
             <td>{{ evt.subType}}</td>
             <td>{{ evt.desc}}</td>
             <td>{{ evt.correct}}</td>
+            <td>{{ evt.alarmState}}</td>
             <td>{% if evt.alarmState == 2 %}ALARM
                 {% elif evt.alarmState == 1 %}warn
                 {% else %} ---
