--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -3,7 +3,6 @@
 
     "dataFiles": [
 	"osdb_3min_allSeizures.json",
-	"osdb_3min_falseAlarms.json",
 	"osdb_3min_ndaEvents.json"
 	],
 	"eventFilters": {
@@ -26,16 +25,17 @@
     "testDataFileCsv": "testData.csv",
     "trainDataFileCsv": "trainData.csv",
     "trainAugmentedFileCsv": "trainDataAugmented.csv",
+
     "modelFname": "cnn",
 
     "modelClass": "cnnModel.CnnModel",
     "nLayers": 3,
-    "epochs": 20,
+    "epochs": 200,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
-    "oversample": "none",
-    "undersample": "random",
-    "noiseAugmentation": true,
+    "oversample": "random",
+    "undersample": "none",
+    "noiseAugmentation": false,
     "noiseAugmentationFactor": 10,
     "noiseAugmentationValue": 20.0,
     "phaseAugmentation": true,
@@ -46,7 +46,7 @@
     "randomSeed" : 4,
     "lrFactor" : 0.5,
     "lrPatience": 20,
-    "lrStart": 1e-6,
+    "lrStart": 1e-5,
     "lrMin": 1e-6,
     "earlyStoppingPatience": 50,
     "trainingVerbosity": 1
