Started adding Jamie Pordoy's AMBER model to nnTraining2 (not working yet)

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -33,8 +33,12 @@
 
     "_modelFname": "cnn",
     "_modelClass": "cnnModel.CnnModel",
-    "modelFname": "specCnn",
-    "modelClass": "specCnnModel.SpecCnnModel",
+    "__modelFname": "specCnn",
+    "__modelClass": "specCnnModel.SpecCnnModel",
+    "modelFname": "amber",
+    "modelClass": "amberModel.AmberModel",
+    "amberRowHidden": 128,
+    "amberColHidden": 128,
     "dims": 2,
     "analysisSamp": 250, 
     "specSamp": 50, 
