Updated nnConfig.json for the actual configuration I used to train the amber model

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -44,7 +44,7 @@
     "specSamp": 50, 
     "specStep":5,
     "nLayers": 4,
-    "epochs": 10,
+    "epochs": 200,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
     "oversample": "none",
@@ -52,7 +52,7 @@
     "noiseAugmentation": true,
     "noiseAugmentationFactor": 10,
     "noiseAugmentationValue": 20.0,
-    "phaseAugmentation": false,
+    "phaseAugmentation": true,
     "splitTestTrainByEvent": true,
     "accSdThreshold": 2.0,
     "testProp" : 0.3,
