Updated specCnn model to include batch normalisation

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -33,13 +33,13 @@
 
     "_modelFname": "cnn",
     "_modelClass": "cnnModel.CnnModel",
-    "__modelFname": "specCnn",
-    "__modelClass": "specCnnModel.SpecCnnModel",
-    "modelFname": "amber",
-    "modelClass": "amberModel.AmberModel",
+    "modelFname": "specCnn",
+    "modelClass": "specCnnModel.SpecCnnModel",
+    "__modelFname": "amber",
+    "__modelClass": "amberModel.AmberModel",
     "amberRowHidden": 128,
     "amberColHidden": 128,
-    "dims": 1,
+    "dims": 2,
     "analysisSamp": 250, 
     "specSamp": 50, 
     "specStep":5,
@@ -50,9 +50,9 @@
     "oversample": "none",
     "undersample": "random",
     "noiseAugmentation": true,
-    "noiseAugmentationFactor": 10,
-    "noiseAugmentationValue": 20.0,
-    "phaseAugmentation": true,
+    "noiseAugmentationFactor": 20,
+    "noiseAugmentationValue": 50.0,
+    "phaseAugmentation": false,
     "splitTestTrainByEvent": true,
     "accSdThreshold": 2.0,
     "testProp" : 0.3,
