Added archiving of nnTraining2 output to a numbered folder to make it easier to compare results.   Also added results of experimets to look at optimising augmentation settings.

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -33,13 +33,13 @@
 
     "_modelFname": "cnn",
     "_modelClass": "cnnModel.CnnModel",
-    "modelFname": "specCnn",
-    "modelClass": "specCnnModel.SpecCnnModel",
-    "__modelFname": "amber",
-    "__modelClass": "amberModel.AmberModel",
+    "__modelFname": "specCnn",
+    "__modelClass": "specCnnModel.SpecCnnModel",
+    "modelFname": "amber",
+    "modelClass": "amberModel.AmberModel",
     "amberRowHidden": 128,
     "amberColHidden": 128,
-    "dims": 2,
+    "dims": 1,
     "analysisSamp": 250, 
     "specSamp": 50, 
     "specStep":5,
@@ -47,11 +47,11 @@
     "epochs": 200,
     "batchSize": 100,
     "seizureTimeRange":[-20,20],
-    "oversample": "none",
-    "undersample": "random",
-    "noiseAugmentation": true,
+    "oversample": "random",
+    "undersample": "none",
+    "noiseAugmentation": false,
     "noiseAugmentationFactor": 20,
-    "noiseAugmentationValue": 50.0,
+    "noiseAugmentationValue": 30.0,
     "phaseAugmentation": false,
     "splitTestTrainByEvent": true,
     "accSdThreshold": 2.0,
@@ -59,10 +59,10 @@
     "validationProp": 0.3,
     "randomSeed" : 4,
     "lrFactor" : 0.5,
-    "lrPatience": 20,
-    "lrStart": 1e-5,
-    "lrMin": 1e-7,
-    "earlyStoppingPatience": 50,
+    "lrPatience": 5,
+    "lrStart": 1e-6,
+    "lrMin": 1e-8,
+    "earlyStoppingPatience": 10,
     "trainingVerbosity": 1
 
 }
