Updated nnTrainer to create train/validation split early in the process so that we do not apply augmentation to the validation data.  This also ensures that the train/validation split is based on whole seizures, not datapoints, so the validation dataset is completely separate from the train dataset.

--- a/user_tools/nnTraining2/nnConfig.json
+++ b/user_tools/nnTraining2/nnConfig.json
@@ -10,7 +10,7 @@
         "osdb_3min_falseAlarms.json"
     ],
 	"eventFilters": {
-		"includeUserIds" : [], 
+		"includeUserIds" : ["39"], 
 		"excludeUserIds" : [],
 		"includeTypes" : [],
 		"excludeTypes" : [],
@@ -26,9 +26,11 @@
 		},
     "testDataFileJson": "testData.json",
     "trainDataFileJson": "trainData.json",
+    "valDataFileJson": "valData.json",
     "testDataFileCsv": "testData.csv",
     "testBalancedFileCsv": "testDataBalanced.csv",
     "trainDataFileCsv": "trainData.csv",
+    "valDataFileCsv": "valData.csv",
     "trainAugmentedFileCsv": "trainDataAugmented.csv",
 
     "_modelFname": "cnn",
